# BulbSchedule

./: .gitignore  ALL_BUILD.vcxproj  BulbSchedule.sln  CMakeLists.txt  CMakeSettings.json  ZERO_CHECK.vcxproj  main.cpp  parser.h  plot.awk  plot.plot  plot.py  plot.sh  plot2.plot  scheduler.vcxproj  structs.h
DATA_Files/: readme.txt
DATA_Files/Facility2Constellation/: Facility-Anadyr1.txt  Facility-Anadyr2.txt  Facility-Cape_Town.txt  Facility-Dehli.txt  Facility-Irkutsk.txt  Facility-Magadan1.txt  Facility-Magadan2.txt  Facility-Moscow.txt  Facility-Murmansk1.txt  Facility-Murmansk2.txt  Facility-Norilsk.txt  Facility-Novosib.txt  Facility-RioGallegos.txt  Facility-Sumatra.txt  readme.txt
DATA_Files/Russia2Constellation/: AreaTarget-Russia-To-Satellite-KinoSat_01_plane.txt  AreaTarget-Russia-To-Satellite-KinoSat_02_plane.txt  AreaTarget-Russia-To-Satellite-KinoSat_03_plane.txt  AreaTarget-Russia-To-Satellite-KinoSat_04_plane.txt  AreaTarget-Russia-To-Satellite-KinoSat_05_plane.txt  AreaTarget-Russia-To-Satellite-KinoSat_06_plane.txt  AreaTarget-Russia-To-Satellite-KinoSat_07_plane.txt  AreaTarget-Russia-To-Satellite-KinoSat_08_plane.txt  AreaTarget-Russia-To-Satellite-KinoSat_09_plane.txt  AreaTarget-Russia-To-Satellite-KinoSat_10_plane.txt  AreaTarget-Russia-To-Satellite-KinoSat_11_plane.txt  readme.txt  (+9 more)
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  configurations.xml  project.xml
src/: CMakeLists.txt  algos.cpp  algos.h  bysolver.cpp  greedy.cpp  main.cpp  parser.cpp  parser.h  structs.h  validation.cpp  validation.h  writer.cpp  writer.h
test/: CMakeLists.txt  main.cpp  validation.cpp  validation.h  writer.cpp  writer.h
(+14 files in other folders)
